--- a/.github/workflows/updateEnv.yml
+++ b/.github/workflows/updateEnv.yml
@@ -19,6 +19,12 @@ jobs:
         echo "$SSH_KEY" > private_key.pem
         chmod 600 private_key.pem
 
+    - name: Check for dependency changes
+      id: check_changes
+      run: |
+        # Check if package.json or package-lock.json has changed
+        git diff --quiet HEAD^ HEAD package.json package-lock.json || echo "CHANGED=true" >> $GITHUB_ENV
+
     - name: Deploy to EC2
       env:
         HOST: ${{ secrets.HOST }}
@@ -30,7 +36,7 @@ jobs:
         DATABASE_CLIENT: ${{ secrets.DATABASE_CLIENT }}
         DATABASE_FILENAME: ${{ secrets.DATABASE_FILENAME }}
         JWT_SECRET: ${{ secrets.JWT_SECRET }}
-        EC2_SERVER_IP: ${{ secrets.EC2_SERVER_IP }}  # 서버 IP를 변수로 설정
+        EC2_SERVER_IP: ${{ secrets.EC2_SERVER_IP }}
       run: |
         ssh -o StrictHostKeyChecking=no -i private_key.pem ubuntu@${EC2_SERVER_IP} "
         cd /home/ubuntu/strapi-test &&
@@ -43,6 +49,8 @@ jobs:
         echo 'DATABASE_CLIENT=${DATABASE_CLIENT}' >> .env &&
         echo 'DATABASE_FILENAME=${DATABASE_FILENAME}' >> .env &&
         echo 'JWT_SECRET=${JWT_SECRET}' >> .env &&
-        npm install &&
+        echo 'EC2_SERVER_IP=${EC2_SERVER_IP}' >> .env &&
+        # Conditionally run npm install if package.json or package-lock.json has changed
+        if [ \"$CHANGED\" == \"true\" ]; then npm install; fi &&
         npm run build &&
-        pm2 restart strapi-test-dev"  # PM2로 실행한 Strapi 애플리케이션 이름 사용
+        pm2 restart strapi-test-dev"
